--- a/manifest.json
+++ b/manifest.json
@@ -63,7 +63,7 @@
       "name": "Yahoo",
       "keyword": "Search Armored",
       "favicon_url": "https://searcharmored.com",
-      "search_url": "https://searcharmored.com/hapi/omniSearch?q={searchTerms}&acTypeId=1",
+      "search_url": "https://searcharmored.com/hapi/?q={searchTerms}&acTypeId=1",
       "suggest_url": "https://searcharmored.com/apps/dagDefaultAutocomplete?q={searchTerms}&acTypeId=1&browser=0",
       "encoding": "UTF-8",
       "is_default": true
